docs: document Spark 4 IntelliJ setup